--- a/assets/scss/_inicio.scss
+++ b/assets/scss/_inicio.scss
@@ -82,8 +82,9 @@ tr:hover {
 
 .plpx-resultados-anuncio__lateral {
 	background-color: green;
-	width: 220px;
-	height: 90px;
+
+	width: 15em;
+	height: 7.5em;
 	margin-bottom: 1em;
 }
 
