--- a/assets/scss/pulpox.scss
+++ b/assets/scss/pulpox.scss
@@ -1,4 +1,12 @@
+//GENERAL
 @import "../../../pulpox_ads_nuevo/assets/scss/base/config.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/padding.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/margin.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/text.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/flexbox.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/bootstrap.scss";
+
+//COMPONENTES
 @import "../../../pulpox_ads_nuevo/assets/scss/menu.scss";
 @import "../../../pulpox_ads_nuevo/assets/scss/botones.scss";
 
