--- a/assets/scss/base/_text.scss
+++ b/assets/scss/base/_text.scss
@@ -31,7 +31,30 @@ h6 {
 
 a,
 p,
-span {
-	text-decoration: none;
-	font-size: 1.6rem;
+.plpx-span-text-dark {
+	color: $color_dark;
+}
+
+.plpx-span-text-white {
+	color: white;
+}
+
+.plpx-span-text-1 {
+	font-size: 1rem;
+}
+
+.plpx-span-text-2 {
+	font-size: 1.5rem;
+}
+
+.plpx-span-text-3 {
+	font-size: 2rem;
+}
+
+.plpx-span-text-4 {
+	font-size: 2.5rem;
+}
+
+.plpx-span-text-5 {
+	font-size: 3rem;
 }
