--- a/assets/scss/pulpox.scss
+++ b/assets/scss/pulpox.scss
@@ -4,6 +4,7 @@
 @import "../../../pulpox_ads_nuevo/assets/scss/base/margin.scss";
 @import "../../../pulpox_ads_nuevo/assets/scss/base/text.scss";
 @import "../../../pulpox_ads_nuevo/assets/scss/base/flexbox.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/base/icons.scss";
 @import "../../../pulpox_ads_nuevo/assets/scss/base/bootstrap.scss";
 
 //COMPONENTES
